<resources>
    <string name="app_name">Salvage-MindBodyEarth</string>
    <string name="today_s_journal_entry">Today\'s Journal Entry</string>
    <string name="journalTitle">Today\'s Journal Entry</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="journal_icon">Journal Icon</string>
    <string name="meal_plan_icon">Meal planning icon</string>
    <string name="meal_plan">Meal Planning</string>
    <string name="workout_plan_icon">Workout planning icon</string>
    <string name="workout_plan">Workout Planning</string>
    <string name="tips_icon">Tips icon</string>
    <string name="tips">Tips And Tricks</string>
    <string name="carbon_footprint_tracker_icon">Carbon footprint tracker Icon</string>
    <string name="carbon_footprint_tracker">Carbon Footprint Tracker</string>
    <string name="back">Back</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="journalling">Journalling</string>
    <string name="carbon_footprint">Carbon Footprint</string>
    <string name="carbon_footprint_icon">carbon footprint icon</string>
    <string name="Tips">Tips</string>
    <string name="journal">Journal</string>
    <string name="workout_type">Workout Type</string>
    <string name="workout_name">Workout Name</string>
    <string name="sets">Sets:</string>
    <string name="reps">Reps:</string>
</resources>