<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    android:orientation="vertical"
    android:paddingTop="100dp"
    tools:context=".Activities.MainActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/bubble_journal"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_margin="8dp"
        android:visibility="visible"
        app:cardBackgroundColor="@color/teal_200"
        app:cardCornerRadius="24dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toStartOf="@id/bubble_meal_plan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:contentDescription="@string/journal_icon"
            android:src="@drawable/ic_journal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/journal"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </com.google.android.material.card.MaterialCardView>

    <!-- Bubble 2 -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/bubble_meal_plan"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@color/teal_200"
        app:cardCornerRadius="24dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/bubble_journal"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_gravity="center"
            android:contentDescription="@string/meal_plan_icon"
            android:src="@drawable/ic_meal_plan" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/meal_plan"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </com.google.android.material.card.MaterialCardView>

    <!-- Bubble 3 -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/bubble_workout_plan"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@color/teal_200"
        app:cardCornerRadius="24dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toStartOf="@id/bubble_meditation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bubble_journal">

        <ImageView
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_gravity="center"
            android:contentDescription="@string/workout_plan_icon"
            android:src="@drawable/ic_workout_plan" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/workout_plan"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </com.google.android.material.card.MaterialCardView>

    <!-- Bubble 4 -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/bubble_meditation"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@color/teal_200"
        app:cardCornerRadius="24dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/bubble_workout_plan"
        app:layout_constraintTop_toBottomOf="@id/bubble_meal_plan">

        <ImageView
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_gravity="center"
            android:contentDescription="@string/tips_icon"
            android:src="@drawable/ic_tips" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/Tips"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </com.google.android.material.card.MaterialCardView>

    <!-- Bubble 5 -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/bubble_carbon_footprint"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@color/teal_200"
        app:cardCornerRadius="24dp"
        app:cardElevation="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bubble_workout_plan">

        <ImageView
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_gravity="center"
            android:contentDescription="@string/carbon_footprint_icon"
            android:src="@drawable/ic_carbon_footprint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/carbon_footprint"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>